# fashion_mnist

./: .gitignore  README.md  log.conf  plot_fashion_mnist.ipynb  pyproject.toml
src/fashion_mnist/: __init__.py  dataloader.py  helper.py  main.py
