[project]
name = "fashion-mnist"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "minta.chiu", email = "evadcmd@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "typer>=0.12.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.0",
    "matplotlib>=3.9.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_mnist"]

[tool.rye.scripts]
train = { cmd = ["python", "-m", "fashion_mnist.main"] }
